@@ -24,7 +24,8 @@ Version 1.0.8.10
      * LangCheck warnings from GO language file (BenBE)
      * Some additions to the Objeck language file (Randy Hollines)
      * Properly highlight infinity as numbers for J (Ric Sherlock)
-  -  Improved GDB Backtrace language file (Milian Wolff)
+     * Improved GDB Backtrace language file (Milian Wolff)
+     * Updated Liberty BASIC language file (Chris Iverson)
 Version 1.0.8.9
   -  Added language files
      * Algol68 (Neville Dempsey)
